--- a/to-do-list/style-to-do.css
+++ b/to-do-list/style-to-do.css
@@ -72,6 +72,7 @@ ul li{
     cursor: pointer;
     user-select: none;
     position: relative;
+    line-height: 20px;
 }
 
 ul li::before{
@@ -95,4 +96,22 @@ ul li.checked{
 
 ul li.checked::before{
     background-image: url(images/checked.png);
+}
+
+ul li span{
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+}
+
+ul li span:hover{
+    background: #edeef0;
+    border-radius: 50%;
+
 }
