--- a/e-commerce-website/style.css
+++ b/e-commerce-website/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 .navbar{
@@ -37,6 +38,7 @@ p{
 
 .container{
     max-width: 1300px;
+    height: 100vh;
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
@@ -56,7 +58,7 @@ p{
 
 .col-2 img{
     max-width: 100%;
-    padding: 50px 0;
+    padding: 50px 0px;
 }
 
 .col-2 h1{
@@ -74,10 +76,71 @@ p{
     padding: 8px 30px;
     margin: 30px 0;
     border-radius: 30px;
+    transition: 0.5s ease;
 
     
 }
 
 .header{
     background: radial-gradient(#fff, #ffd6d6);
+}
+
+.btn:hover{
+    background: #563434;
+}
+
+.header .row{
+    margin-top: 70px;
+}
+
+.categories{
+    margin: 70px 0;
+}
+
+.col-3{
+    flex-basis: 30%;
+    min-width: 250px;
+    margin-bottom: 30px;
+}
+.col-3 img{
+    width: 100%;
+}
+
+.small-container{
+    max-width: 1080px;
+    margin: auto;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.col-4{
+    flex-basis:25%;
+    padding: 10px;
+    min-width: 200px;
+    margin-bottom: 50px;
+}
+
+.col-4 img{
+    width: 100%;
+}
+
+.title{
+    text-align: center;
+    margin: 0 auto 80px;
+    position: relative;
+    line-height: 60px;
+    color: #555;
+}
+
+.title::after{
+    content: "";
+    background: #ff523b;
+    width: 80px;
+    height: 5px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+
 }
